--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
-.App {
-  text-align: center;
+.main-div{
+  /* color: #FFE3D8; */
+  background-color: #0A043C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.middle-container{
+  background-color: #03506F;
+  padding: 1rem;
+  border-radius: 5px;
+  max-height: 100vh;
+  overflow-y: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+::-webkit-scrollbar {
+  width: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #BBBBBB;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: white;
+}
+
+textarea{
+  width: 30vw;
+  min-height: 12vh;
+  font-size: 1.2rem;
+  padding: 1rem 0 0 1rem;
+}
+
+.btn-container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn-container button{
+  margin-top: 1rem;
+  padding: 0.3rem 0.7rem;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.info-container{
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid black;
+}
+
+.post-div{
+  margin: 1rem 0;
+  background-color: #FFE3D8;
+  border-radius: 10px;
+  max-width: 30vw;
+}
+
+.info-container img{
+  height: 7vh;
+  border-radius: 50%;
+}
+
+.info-container p{
+  padding-left: 1rem;
+  font-weight: 700;
+}
+
+.post-div .content{
+  padding: 1rem;
+}
+
+.tooltipContainer{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 30vh;
+  overflow-y: auto;
+  /* justify-content: center; */
 }
 
-.App-link {
-  color: #61dafb;
+.tooltipContainer input{
+  outline: none;
+  padding: 2px 5px;
+  font-size: 0.8rem;
+  font-weight: 600;
+  line-height: 22px;
+  margin-bottom: 0.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.childGif{
+  margin: 0.4rem 0;
+}
+
+.childGif img{
+  width: 15vw;
+}
+
+.tooltipContainer::-webkit-scrollbar {
+  display: none;
 }
